--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,32 +2,69 @@
 
 {% block content %}
 
-<div class="col-md-6 offset-md-3">
-
-    {% if user.is_authenticated %}
-
-    <h1>Hello World</h1>
-
-    {% else %}
-
-    <h1>Login</h1>
-    <br />
-    <form method="POST" action="{% url 'home' %}">
-        {% csrf_token %}
-        <div class="mb-3">
-            <input type="text" class="form-control" name="username" placeholder="Username" required />
-        </div>
+<div class="d-flex justify-content-center ">
+    <div class="col-md-10">
+        {% if user.is_authenticated %}
+        <h1 class="text-center">Records</h1>
         <br>
-        <div class="mb-3">
-            <input type="password" class="form-control" name="password" placeholder="password" required />
+
+        {% if records %}
+        <div class="table-responsive">
+            <table class="table table-bordered table-hover table-striped table-bordered ">
+                <thead class="table-dark">
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">First Name</th>
+                        <th scope="col">Last Name</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Phone No.</th>
+                        <th scope="col">Address</th>
+                        <th scope="col">City</th>
+                        <th scope="col">State</th>
+                        <th scope="col">Zipcode</th>
+                        <th scope="col">Created On</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for record in records %}
+                    <tr>
+                        <th scope="row">{{ record.id }}</th>
+                        <td>{{ record.first_name }}</td>
+                        <td>{{ record.last_name }}</td>
+                        <td>{{ record.email }}</td>
+                        <td>{{ record.phone }}</td>
+                        <td>{{ record.address }}</td>
+                        <td>{{ record.city }}</td>
+                        <td>{{ record.state }}</td>
+                        <td>{{ record.zipcode }}</td>
+                        <td>{{ record.created_at }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
-        <br>
-        <button type="submit" class="btn btn-secondary">Login</button>
-    </form>
+        {% else %}
+        <p class="text-center">No records found.</p>
+        {% endif %}
+        {% else %}
 
-    {% endif %}
+        <h1 class="text-center">Login</h1>
+        <br />
+        <form method="POST" action="{% url 'home' %}">
+            {% csrf_token %}
+            <div class="mb-3">
+                <input type="text" class="form-control" name="username" placeholder="Username" required />
+            </div>
+            <br>
+            <div class="mb-3">
+                <input type="password" class="form-control" name="password" placeholder="Password" required />
+            </div>
+            <br>
+            <button type="submit" class="btn btn-secondary w-100">Login</button>
+        </form>
 
+        {% endif %}
+    </div>
 </div>
-
 
 {% endblock %}
