--- a/website/templates/record.html
+++ b/website/templates/record.html
@@ -31,5 +31,6 @@
 <br><br>
 <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
 <a href="{% url 'delete_record' customer_record.id %}" class="btn btn-danger">Delete</a>
+<a href="{% url 'update_record' customer_record.id%}" class="btn btn-primary">Update Record</a>
 
 {% endblock %}
