--- a/website/templates/record.html
+++ b/website/templates/record.html
@@ -1,36 +1,49 @@
-{% extends 'base.html' %}
-
-
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 
 <h1>Customer Records</h1>
-<br>
+<br />
 
 <div class="card">
-    <div class="card-header">
-        <strong>
-            {{ customer_record.first_name }}
-            {{ customer_record.last_name }}
-        </strong>
-    </div>
-    <div class="card-body">
-        <p class="card-text">
-            <strong>Id: </strong>{{ customer_record.id }}<br />
-        </p>
-        <p class="card-text"><strong>Email: </strong>{{ customer_record.email }}<br /></p>
-        <p class="card-text"><strong>Phone: </strong>{{ customer_record.phone }}<br /></p>
-        <p class="card-text"><strong>Address: </strong>{{ customer_record.address }}<br /></p>
-        <p class="card-text"><strong>City: </strong>{{ customer_record.city }}<br /></p>
-        <p class="card-text"><strong>State: </strong>{{ customer_record.state }}<br /></p>
-        <p class="card-text"><strong>Zipcode: </strong>{{ customer_record.zipcode }}<br /></p>
-        <p class="card-text"><strong>Created At:</strong>{{ customer_record.created_at }}<br />
-        </p>
-    </div>
+	<div class="card-header">
+		<strong>
+			{{ customer_record.first_name }} {{ customer_record.last_name }}
+		</strong>
+	</div>
+	<div class="card-body">
+		<p class="card-text">
+			<strong>Id: </strong>{{ customer_record.id }}<br />
+		</p>
+		<p class="card-text">
+			<strong>Email: </strong>{{ customer_record.email }}<br />
+		</p>
+		<p class="card-text">
+			<strong>Phone: </strong>{{ customer_record.phone }}<br />
+		</p>
+		<p class="card-text">
+			<strong>Address: </strong>{{ customer_record.address }}<br />
+		</p>
+		<p class="card-text">
+			<strong>City: </strong>{{ customer_record.city }}<br />
+		</p>
+		<p class="card-text">
+			<strong>State: </strong>{{ customer_record.state }}<br />
+		</p>
+		<p class="card-text">
+			<strong>Zipcode: </strong>{{ customer_record.zipcode }}<br />
+		</p>
+		<p class="card-text">
+			<strong>Created At:</strong>{{ customer_record.created_at }}<br />
+		</p>
+	</div>
 </div>
 
-<br><br>
+<br /><br />
 <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
-<a href="{% url 'delete_record' customer_record.id %}" class="btn btn-danger">Delete</a>
-<a href="{% url 'update_record' customer_record.id%}" class="btn btn-primary">Update Record</a>
+<a href="{% url 'delete_record' customer_record.id %}" class="btn btn-danger"
+	>Delete</a
+>
+<a href="{% url 'update_record' customer_record.id%}" class="btn btn-primary"
+	>Update Record</a
+>
 
 {% endblock %}
