Update back button link in add record template to redirect to home

--- a/website/templates/add_record.html
+++ b/website/templates/add_record.html
@@ -8,9 +8,7 @@
 
 		<br />
 		<button type="submit" class="btn btn-primary">Add Record</button>
-		<a href="{% url 'record'  %}" class="btn btn-secondary">Back</a>
-
-		bl
+		<a href="{% url 'home'  %}" class="btn btn-secondary">Back</a>
 	</form>
 </div>
 
