--- a/website/templates/record.html
+++ b/website/templates/record.html
@@ -39,12 +39,15 @@
 
 <br /><br />
 <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
-{% if request.user.is_authenticated and request.user.is_superuser %}
-<a href="{% url 'delete_record' customer_record.id %}" class="btn btn-danger"
-	>Delete</a
->
+{% if request.user.is_superuser %}
+	<a href="{% url 'delete_record' customer_record.id %}" class="btn btn-danger"
+		>Delete</a
+	>
     <a href="{% url 'update_record' pk=customer_record.id %}" class="btn btn-primary">
         Update Record
+    </a>
+    <a href="{% url 'update_status' pk=customer_record.id %}" class="btn btn-primary">
+        Update status
     </a>
 {% endif %}
 
