--- a/website/templates/update_record.html
+++ b/website/templates/update_record.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %} {% block content %}
 
 <div class="col-md-6 offset-md-3">
-	<h1>Add Record!!!</h1>
+	<h1>Update Record!!!</h1>
 	<br />
-	<form method="POST">
+	<form method="PUT">
 		{% csrf_token %} {{form.as_p}}
 
 		<br />
